fixed up some alignment issues with front end styling

--- a/frontend/src/components/post-form/post.css
+++ b/frontend/src/components/post-form/post.css
@@ -5,7 +5,7 @@
 
 form .field {
   display: block;
-  border: 1px solid #bdbdbd;
+  border: 1px solid #9e9e9e;
   float: left;
   width: 100%;
 }
@@ -14,31 +14,37 @@ form .field.tnb {
   border-top: 0;
 }
 
-form .field.half {
-  width: 50%;
-}
-
-form .field.last {
-  border-left: 0;
-}
-
 form .field label {
   display: block;  
   padding: 1.5rem 2rem 0;     
 }
 
-form .field input,
 form .field textarea {
   display: block;
   width: 100%;
   padding: 0.5rem 2rem 1.5rem;
   font-size: 1.8rem;
   border: 0;
-  color: #000;
+  color: #9e9e9e;
   outline: 0;
 }
 
 form .field textarea {
   min-height: 150px;
   resize: vertical;
+}
+
+.btn-large i {
+  font-size: 1.3rem;
+}
+
+.btn-floating.btn-large {
+  width: 46px;
+  height: 46px;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+.btn-floating.btn-large i {
+  line-height: 49px;
 }
